# self-describing-number

./: go.mod  go.sum  pyproject.toml
self_describing_number/: __main__.py  model.py
src/: main.go  main_test.go  model.go  model_test.go
tests/: test_main.py  test_model.py
